Fix slide position on mobile devices

--- a/src/components/Slides.css
+++ b/src/components/Slides.css
@@ -1,7 +1,7 @@
 .slides {
   display: flex;
   flex-wrap: nowrap;
-  height: 100vh;
+  height: 100%;
   transition: transform .3s ease-out;
 }
 
@@ -9,12 +9,12 @@
   align-items: center;
   display: flex;
   flex: 0 0 auto;
-  height: 100vh;
+  height: 100%;
   justify-content: center;
   width: 100%;
 }
 
 .slide img {
-  max-height: 100vh;
-  max-width: 100vw;
+  max-height: 100%;
+  max-width: 100%;
 }
